<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_toutiao"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/toutiao_news" />
        <item
            android:id="@+id/nav_wechat"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/wechat_select" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_blog" />
        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/more_wonderful" />
    </group>

    <item android:title="@string/tv_other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/tv_share" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_settings" />
        </menu>
    </item>

</menu>
